fix cors requests-endpoints